# remote_camera

./: .config.h.swp  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  cscope.out
autom4te.cache/: output.1  traces.0  traces.1
include/: camera.h
src/: Makefile  Makefile.am  Makefile.in  camera.c  main.c
src/.deps/: main.Po  webcam-camera.Po  webcam-main.Po
